enlaces a telefono y correo

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         <div>
             <h3 class="t-g-claro">Contacto</h3>
             <p>Diana B. Vázquez Camacho</p>
-            <p><b>Teléfono:</b> <a href="">55 6191 9111</a></p>
-            <p><b>e-mail:</b> <a href="">anaid.xd@gmail.com</a></p>
+            <p><b>Teléfono:</b> <a href="tel://5561919111">55 6191 9111</a></p>
+            <p><b>e-mail:</b> <a href="mailto:anaid.xd@gmail.com">anaid.xd@gmail.com</a></p>
         </div>
         <div>
             <h3 class="t-g-claro">Redes Sociales</h3>
