--- a/index.html
+++ b/index.html
@@ -6,94 +6,145 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Diana Vazquez - Front End/Diseño</title>
-    <link rel="shorcut icon" type="image/x-icon" href="assetts/imgs/lyft-icon.png" />
+    <link rel="shorcut icon" type="image/x-icon" href="assets/imgs/grulla.png" />
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.25/css/uikit.min.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
 </head>
 
-<body>
+<body class="uk-background-muted">
     <header class="uk-position-top">
-        <nav class="uk-navbar-container uk-margin uk-navbar-transparent">
+        <nav id="cabezal" class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+            <a class="uk-navbar-item uk-logo t-verde" href="#top"><img src="assets/imgs/grulla.svg" alt="icono-grulla"></a>
             <div class="uk-navbar-left">
-                <a class="uk-navbar-item uk-logo t-verde" href="#">Yo Mera</a>
-                <ul uk-tab>
-                    <li class="uk-active"><a href="#">Home</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Proyectos</a></li>                    
-                    <li><a href="#">Contacto</a></li>                    
+                <ul class="uk-navbar-nav">
+                    <li class="uk-active">
+                        <a href="#home" uk-icon="icon: home"> <span class="uk-visible@m">Home</span> &nbsp;</a>
+                    </li>
+                    <li>
+                        <a href="#conocimientos" uk-icon="icon: cog" uk-scroll> <span class="uk-visible@m">Servicios</span>&nbsp;</a>
+                    </li>
+                    <li>
+                        <a href="#proyectos" uk-icon="icon: album" uk-scroll> <span class="uk-visible@m">Proyectos</span>&nbsp;</a>
+                    </li>
+                    <li>
+                        <a href="#contacto" uk-icon="icon: mail" uk-scroll> <span class="uk-visible@m">Contacto</span>&nbsp;</a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    <main id="home" class="uk-grid uk-grid-small uk-grid uk-child-width-1-1@s uk-child-width-1-2@m uk-padding-small">
+    <main id="home" class="uk-grid uk-grid-small uk-grid uk-child-width-1-1@s uk-child-width-1-2@m uk-padding-small" uk-scrollspy="target: > div; cls:uk-animation-fade hidden:true; delay: 500">
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
-            <h1 class="t-g-azul">Diana Vázquez</h1>
-            <h2>Front End y Diseño</h2>
+            <h1 class="uk-margin-medium-top uk-heading-primary t-uva bold">Diana Vázquez</h1>
+            <h2 class="uk-margin-remove t-g-azul">Front End y Diseño</h2>
         </div>
-        <div>
+        <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
+            <div class="uk-text-center">
+                <div class="uk-inline-clip uk-transition-toggle">
+                    <a id="diana" href=""><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
+                    <div class="uk-transition-fade uk-position-cover uk-position-xlarge uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle uk-border-circle bold">
+                        <p>Diseñadora gráfica & Front End developer con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc. <br> Experiencia en áreas de museografía, diseño editorial, fotografía y edición de imágenes. <br> Gusto por la ingeniería en papel, caligrafía y lettering.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
-    <section id="servicios" class="uk-grid uk-child-width-1-1@s uk-child-width-1-4@m uk-grid-small">
-        <div>
-            <div class="uk-card uk-card-default">
-                <div class="uk-card-media-top">
-                    <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
-                </div>
-                <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Top</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="uk-card uk-card-default">
-                <div class="uk-card-media-top">
-                    <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
-                </div>
-                <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Top</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+    <section id="conocimientos">
+        <h2 class="bold t-verde">Servicios</h2>
+        <div class="uk-grid uk-child-width-1-1@s uk-child-width-1-4@m uk-grid-small">
+            <div>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title">Media Top</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <div class="uk-card uk-card-default">
-                <div class="uk-card-media-top">
-                    <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
-                </div>
-                <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Top</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            <div>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title">Media Top</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <div class="uk-card uk-card-default">
-                <div class="uk-card-media-top">
-                    <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
+            <div>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title">Media Top</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    </div>
                 </div>
-                <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Top</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+            <div>
+                <div class="uk-card uk-card-default">
+                    <div class="uk-card-media-top">
+                        <img src="assets/imgs/brandi-redd-122054.jpg" alt="Muestra">
+                    </div>
+                    <div class="uk-card-body">
+                        <h3 class="uk-card-title">Media Top</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <hr class="uk-divider-icon">
-    <section id="Proyectos">
 
+    <section id="proyectos">
+        <div class="uk-child-width-1-3@s uk-grid-collapse uk-text-center" uk-grid>
+            <div>
+                <div class="uk-tile claro">
+                    <p class="uk-h4">Proyecto 1</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-tile g-azul">
+                    <p class="uk-h4">Proyecto 2</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-tile claro">
+                    <p class="uk-h4">Proyecto 3</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-tile uva">
+                    <p class="uk-h4">Proyecto 4</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-tile uk-tile-default">
+                    <p class="uk-h4">Proyecto 5</p>
+                </div>
+            </div>
+            <div>
+                <div class="uk-tile verde">
+                    <p class="uk-h4">Proyecto 6</p>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer class="uk-grid g-oscuro t-g-claro uk-child-width-1-2 uk-padding uk-grid-divider uk-text-center">
+    <footer id="contacto" class="uk-grid g-oscuro t-g-claro uk-child-width-1-2 uk-padding uk-grid-divider uk-text-center">
         <div>
             <h3 class="t-g-claro">Contacto</h3>
             <p>Diana B. Vázquez Camacho</p>
-            <p><b>Teléfono:</b> <a href="tel://5561919111">55 6191 9111</a></p>
-            <p><b>e-mail:</b> <a href="mailto:anaid.xd@gmail.com">anaid.xd@gmail.com</a></p>
+            <p><b>Teléfono:</b> <a href="tel://5561919111" class="t-g-claro">55 6191 9111</a></p>
+            <p><b>e-mail:</b> <a href="mailto:anaid.xd@gmail.com" class="t-g-claro">anaid.xd@gmail.com</a></p>
         </div>
         <div>
             <h3 class="t-g-claro">Redes Sociales</h3>
@@ -107,6 +158,7 @@
     <!-- UIkit JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.25/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.25/js/uikit-icons.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
