agregando enlaces a proyectos2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#home" uk-icon="icon: home"> <span class="uk-visible@m">Home</span> &nbsp;</a>
                     </li>
                     <li>
-                        <a href="#conocimientos" uk-icon="icon: cog" uk-scroll> <span class="uk-visible@m">Servicios</span>&nbsp;</a>
+                        <a href="#conocimientos" uk-icon="icon: cog" uk-scroll> <span class="uk-visible@m">Conocimientos</span>&nbsp;</a>
                     </li>
                     <li>
                         <a href="#proyectos" uk-icon="icon: album" uk-scroll> <span class="uk-visible@m">Proyectos</span>&nbsp;</a>
@@ -174,7 +174,7 @@
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/freelancer.png" alt="freelancer">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Freelancer</a>
+                            <a href="https://dianix.github.io/applove2/" class="t-verde uk-text-large bold uk-margin-remove">Freelancer</a>
                             <p class=" uk-margin-remove">Maquetación con uso de Bootstrap.</p>
                         </div>
                     </div>
