ajustes en alineación de footer

--- a/index.html
+++ b/index.html
@@ -232,15 +232,18 @@
         <div class="uk-heading-line uk-text-center uk-container">
             <h2 class="t-g-claro asap-b">Comunícate</h2>
         </div>
-        <div class="uk-grid uk-child-width-1-1@s uk-child-width-1-2@m">
+        <div class="uk-grid uk-child-width-1-1@s uk-text-center">
             <div class="uk-text-small">
                 <p class="uk-text-lead t-g-claro">D.C.G. Diana B. Vázquez Camacho</p>
+            </div>
+            <div>
                 <a href="tel://5561919111" class="t-g-claro" uk-icon="icon: phone; ratio: 2"></a>
                 <a href="mailto:anaid.xd@gmail.com" class="t-g-claro" uk-icon="icon: mail; ratio: 2"></a>
-                <a target="_blank" href="https://github.com/dianix" class="t-g-claro uk-margin-medium-right" uk-icon="icon: github; ratio: 2"></a>
                 <a target="_blank" href="https://linkedin.com/in/dianix-v" class="t-g-claro" uk-icon="icon: linkedin; ratio: 2"></a>
+                <a target="_blank" href="https://github.com/dianix" class="t-g-claro uk-margin-medium-right" uk-icon="icon: github; ratio: 2"></a>
             </div>
-            
+
+
         </div>
     </footer>
 
