ajustando seccion de proyectos -enlaces y estilos-

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
     </section>
 
-    <section id="proyectos" class="uva">
+    <section id="proyectos" class="g-oscuro">
         <div class="uk-heading-line uk-text-left uk-container">
             <h2 class="t-g-claro asap-b">Proyectos</h2>
         </div>
@@ -155,22 +155,44 @@
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/lyft.png" alt="lyft">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a target="_blank" href="https://dianix.github.io/lyft/index.html" class="t-verde uk-text-large bold uk-margin-remove">Lyft</a>
-                            <p class=" uk-margin-remove">Maquetación de landing page con flexbox.</p>
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3><b>Lyft</b></h3>
+                            <p class="">Maquetación de landing page con flexbox.</p>
+                            <div>
+                                <a target="_blank" href="https://dianix.github.io/lyft/index.html" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/lyft" class="t-verde m-lateral"uk-icon="icon: github-alt; ratio:2"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="uk-text-center">
+                    <div class="uk-inline-clip uk-transition-toggle">
+                        <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3><b>Labcar</b></h3>
+                            <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Responsive.</p>
+                            <div>
+                                <a target="_blank" href="https://dianix.github.io/labcar/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/labcar" class="t-verde m-lateral"uk-icon="icon: github-alt; ratio:2"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/applove.png" alt="applove">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Applove</a>
-                            <p class=" uk-margin-remove">Maquetación de landing page con uso de grid.</p>
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h3><b>Applove</b></h3>
+                            <p class="">Maquetación de landing page con uso de grid.</p>
+                            <div>
+                                <a target="_blank" href="https://dianix.github.io/applove2/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/applove2" class="t-verde m-lateral"uk-icon="icon: github-alt; ratio:2"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="uk-text-center">
+                
+                <!--<div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/freelancer.png" alt="freelancer">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
@@ -178,13 +200,13 @@
                             <p class=" uk-margin-remove">Maquetación con uso de Bootstrap.</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
-                        <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
+                        <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Labcar</a>
-                            <p class=" uk-margin-remove">Uso de framework bootstrap para maquetación y modales.</p>
+                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Twitter</a>
+                            <p class=" uk-margin-remove">Funcionalidad para contar caracteres, publicar y borrar mensajes y estilos con materialize.</p>
                         </div>
                     </div>
                 </div>
@@ -193,11 +215,11 @@
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
                             <a href="" class="t-verde uk-text-large bold uk-margin-remove">Antojitos.mx</a>
-                            <p class=" uk-margin-remove">Uso de framework Materialize y API de google maps.</p>
+                            <p class=" uk-margin-remove">Uso de API google maps y estilos con Materialize.</p>
                         </div>
                     </div>
                 </div>
-                <div class="uk-text-center">
+               <!-- <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/foro.png" alt="foro">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
@@ -205,22 +227,13 @@
                             <p class=" uk-margin-remove">Maquetación con bootstrap y uso de AJAX para llamar API.</p>
                         </div>
                     </div>
-                </div>
-                <div class="uk-text-center">
-                    <div class="uk-inline-clip uk-transition-toggle">
-                        <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Twitter</a>
-                            <p class=" uk-margin-remove">Maquetación con materialize y código en JS para contar caracteres, publicar y borrar mensajes.</p>
-                        </div>
-                    </div>
-                </div>
+                </div>-->
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
                             <a href="" class="t-verde uk-text-large bold uk-margin-remove">Pokedex</a>
-                            <p class=" uk-margin-remove">Maquetación con materialize y uso de AJAX para llamar datos de API.</p>
+                            <p class=" uk-margin-remove">AJAX para consumo de API y estilos con materialize.</p>
                         </div>
                     </div>
                 </div>
@@ -228,9 +241,9 @@
             </div>
         </div>
     </section>
-    <footer id="contacto" class="uk-container-expand g-oscuro t-g-claro uk-padding">
+    <footer id="contacto" class="uk-container-expand uva t-g-claro uk-padding">
         <div class="uk-heading-line uk-text-center uk-container">
-            <h2 class="t-g-claro asap-b">Comunícate</h2>
+            <h2 class="t-g-claro asap-b">Contáctame</h2>
         </div>
         <div class="uk-grid uk-child-width-1-1@s uk-text-center">
             <div class="uk-text-small">
