ajustando seccion conocimientos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div id="herramientas" class="uk-grid uk-child-width-1-1@s uk-grid-small">
             <h4 class="t-verde julius uk-text-center@s uk-text-left@m">Herramientas de desarrollo web</h4>
-            <div class="uk-child-width-1-5@m uk-text-center" uk-grid>
+            <div class="web uk-child-width-1-6@m uk-text-center" uk-grid>
                 <div>
                     <div class="uk-tile uk-padding-small">
                         <img src="assets/imgs/tools/html5.svg" alt="HTML5">
@@ -69,7 +69,9 @@
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/css3.svg" alt="CSS 3">
+                        <a class="uk-button uk-margin-small" title="Intermedio" uk-tooltip="pos:top-right">
+                            <img src="assets/imgs/tools/css3.svg" alt="CSS 3">
+                        </a>
                         <p class="t-g-claro">CSS 3</p>
                     </div>
                 </div>
@@ -160,7 +162,7 @@
                             <p class="">Maquetación de landing page con flexbox.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/lyft/index.html" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/lyft" class="t-verde m-lateral"uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/lyft" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
@@ -173,7 +175,7 @@
                             <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Responsive.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/labcar/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/labcar" class="t-verde m-lateral"uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/labcar" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
@@ -186,12 +188,12 @@
                             <p class="">Maquetación de landing page con uso de grid.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/applove2/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
-                                <a target="_blank" href="https://github.com/dianix/applove2" class="t-verde m-lateral"uk-icon="icon: github-alt; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/applove2" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                
+
                 <!--<div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/freelancer.png" alt="freelancer">
@@ -219,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-               <!-- <div class="uk-text-center">
+                <!-- <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/foro.png" alt="foro">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
